# solution

./: .env  Cargo.toml  Rocket.toml  docker-compose.yaml
.docker/pgdata/: postgresql.conf
.docker/rabbitmq/: Dockerfile  readme.md
.sqlx/: query-5b0e4429f161d5e26edeaadc57e436aa8b9360defbac6c7a618fc4032e4aea8b.json  query-725d8d9bdba2e8de270930557527595f42f4a68fd7d5ae7c65bd0aa47c629a0a.json  query-d2704e006763e5563679ed6ff66f748df174c11c8d860e3c787994201d48be9a.json
certs/: ca_cert.pem  ca_key.pem  localhost-key.pem  localhost.pem  rsa_sha256.p12  rsa_sha256_cert.pem  rsa_sha256_key.pem
migrations/2023-11-13-022508_create_post/: up.sql
src/: create_app.rs  lib.rs  main.rs  main_example.rs  middler.rs  posts.rs
src/adapters/: rabbitmq_adapter.rs
src/db/: mod.rs  schema.rs
src/domain/: aggregate_root.rs  entity.rs  identifier.rs  mod.rs
src/domain/input/: input_id.rs  input_validator.rs  mod.rs  price.rs
src/domain/supply/: mod.rs  price.rs  supply_id.rs  supply_validator.rs
src/domain/validation/: error.rs  mod.rs  notification.rs  validation_handler.rs  validator.rs
src/infra/: mod.rs
src/infra/adapters/: mod.rs  rabbitmq_adapter.rs
templates/: about.html.hbs  footer.html.hbs  index.html.hbs  layout.html.hbs  nav.html.hbs
tmp/: texto.txt  texto2.txt
