[package]
name = "solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "tls", "mtls", "json"] }

rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rocket_async_compression = "0.5.1"

openid = "0.12.1"

# serialization / deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

diesel = { version = "2.1.4" }
diesel_migrations = "2.1.0"
chrono = "0.4.31"
dotenvy = "0.15.7"

rabbitmq-stream-client = "0.4.1"

uuid = { version = "1.6.1", features = ["v4"] }

num-format = "0.4.4"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_postgres", "sqlx_postgres"]

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["macros", "migrate"]

[profile.dev.package.sqlx-macros]
opt-level = 3
